2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Optimize the BLAS benchmark suite.
	
	* benchmarks/blas/templates/xasum.c,
	* benchmarks/blas/templates/xaxpy.c,
	* benchmarks/blas/templates/xaxpyc.c,
	* benchmarks/blas/templates/xrot.c,
	* benchmarks/blas/templates/xnrm2.c,
	* benchmarks/blas/templates/xscal.c,
	* benchmarks/blas/templates/xdot.c,	
	* benchmarks/blas/templates/xdotc.c: Optimize some. Use anonymous
	thread arguments where appropriate.

2009-11-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* build-aux/benchmarks.mk: Make `bench.mk' dependent upon
	`Makefile.am' to catch file list updates.

2009-11-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the BLAS benchmark suite.
	
	* benchmarks/blas/templates/xiamax.c,
	* benchmarks/blas/isamax.c,
	* benchmarks/blas/idamax.c,
	* benchmarks/blas/bench-isamax.c,
	* benchmarks/blas/bench-idamax.c,
	* benchmarks/blas/bench-isamax.inputs,
	* benchmarks/blas/bench-idamax.inputs: New.

	* benchmarks/blas/Makefile.am: Update accordingly.

2009-11-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the BLAS benchmark suite.
	
	* benchmarks/blas/templates/xscal.c,
	* benchmarks/blas/sscal.c,
	* benchmarks/blas/dscal.c,
	* benchmarks/blas/bench-sscal.c,
	* benchmarks/blas/bench-dscal.c,
	* benchmarks/blas/bench-sscal.inputs,
	* benchmarks/blas/bench-dscal.inputs: New.

	* benchmarks/blas/Makefile.am: Update accordingly.
	
2009-11-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the BLAS benchmark suite.
	
	* benchmarks/blas/templates/xnrm2.c,
	* benchmarks/blas/snrm2.c,
	* benchmarks/blas/dnrm2.c,
	* benchmarks/blas/bench-snrm2.c,
	* benchmarks/blas/bench-dnrm2.c,
	* benchmarks/blas/bench-snrm2.inputs,
	* benchmarks/blas/bench-dnrm2.inputs: New.

	* benchmarks/blas/Makefile.am: Update accordingly.

2009-11-03  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the BLAS benchmark suite.
	
	* benchmarks/blas/templates/xdot.c: Simplify.
	